--- a/BibliotekaMobilnaPWR/res/layout/main.xml
+++ b/BibliotekaMobilnaPWR/res/layout/main.xml
@@ -64,6 +64,11 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:gravity="right">
+        <Spinner
+            android:id="@+id/spinner1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
 	    <Button 
             android:id="@+id/main_search"
 	        android:layout_width="wrap_content"
