--- a/BibliotekaMobilnaPWR/res/layout/result_book_nolog.xml
+++ b/BibliotekaMobilnaPWR/res/layout/result_book_nolog.xml
@@ -4,26 +4,42 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
- <ScrollView
-     android:layout_width="fill_parent"
-     android:layout_height="425dp"
-     android:scrollbars="vertical" >
-
     <TableLayout
-        android:id="@+id/tableLayout1"
+        android:id="@+id/table"
         android:layout_width="match_parent"
-        android:layout_height="270dp"
-        android:layout_weight="0.65"
+        android:layout_height="wrap_content"
         android:padding="10dp"
+        android:background="#4285f4"
         android:shrinkColumns="*"
         android:stretchColumns="*" >
     </TableLayout>
+
+    <ScrollView
+        android:layout_width="fill_parent"
+        android:layout_height="379dp"
+        android:layout_weight="0.71"
+        android:scrollbars="vertical" >
+
+        <TableLayout
+            android:id="@+id/tableLayout1"
+            android:layout_width="match_parent"
+            android:layout_height="270dp"
+            android:layout_weight="0.65"
+            android:background="#EFFFBC"
+            android:padding="10dp"
+            android:shrinkColumns="*"
+            android:stretchColumns="*" >
+        </TableLayout>
     </ScrollView>
-    
+
     <Button
         android:id="@+id/btnBack"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="33dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="10dp"
+        android:background="#458b74"
         android:text="@string/btnString" />
 
 </LinearLayout>
