--- a/BibliotekaMobilnaPWR/res/layout/booking_activity.xml
+++ b/BibliotekaMobilnaPWR/res/layout/booking_activity.xml
@@ -3,7 +3,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-
+<ScrollView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:scrollbars="vertical" >
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="8.58"
+        android:text="TextView" />
+</ScrollView>
     <TableLayout
         android:id="@+id/table_booking"
         android:layout_width="match_parent"
@@ -12,12 +22,12 @@
         android:background="#4285f4"
         android:shrinkColumns="*"
         android:stretchColumns="*" >
+
     </TableLayout>
 
     <ScrollView
         android:layout_width="fill_parent"
-        android:layout_height="379dp"
-        android:layout_weight="0.71"
+        android:layout_height="58dp"
         android:scrollbars="vertical" >
 
         <TableLayout
