--- a/BibliotekaMobilnaPWR/res/layout/activity_edytuj_konto.xml
+++ b/BibliotekaMobilnaPWR/res/layout/activity_edytuj_konto.xml
@@ -5,7 +5,7 @@
     tools:context="${packageName}.${activityClass}" >
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/confirmation_info"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
@@ -16,21 +16,21 @@
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/confirmation_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignRight="@+id/textView1"
-        android:layout_below="@+id/textView1"
+        android:layout_alignRight="@+id/confirmation_info"
+        android:layout_below="@+id/confirmation_info"
         android:layout_marginTop="17dp"
         android:text="Hasło"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/confirmattion_body"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/textView4"
-        android:layout_below="@+id/textView2"
+        android:layout_below="@+id/confirmation_title"
         android:layout_marginTop="24dp"
         android:text="Imie"
         android:textAppearance="?android:attr/textAppearanceLarge" />
@@ -39,8 +39,8 @@
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignRight="@+id/textView2"
-        android:layout_below="@+id/textView3"
+        android:layout_alignRight="@+id/confirmation_title"
+        android:layout_below="@+id/confirmattion_body"
         android:layout_marginTop="74dp"
         android:text="E-mail"
         android:textAppearance="?android:attr/textAppearanceLarge" />
@@ -50,7 +50,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/textView5"
-        android:layout_below="@+id/textView3"
+        android:layout_below="@+id/confirmattion_body"
         android:layout_marginTop="22dp"
         android:text="Nazwisko"
         android:textAppearance="?android:attr/textAppearanceLarge" />
@@ -76,19 +76,19 @@
         android:text="Zapisz" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/btnstatement"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/button1E"
-        android:layout_alignLeft="@+id/textView1"
+        android:layout_alignLeft="@+id/confirmation_info"
         android:text="Anuluj" />
 
     <TextView
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/textView1"
-        android:layout_alignBottom="@+id/textView1"
+        android:layout_alignBaseline="@+id/confirmation_info"
+        android:layout_alignBottom="@+id/confirmation_info"
         android:layout_alignRight="@+id/button1E"
         android:layout_marginRight="28dp"
         android:text="pwr192345"
@@ -99,7 +99,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:layout_alignTop="@+id/textView2"
+        android:layout_alignTop="@+id/confirmation_title"
         android:ems="10"
         android:inputType="textPassword"
         android:text="aaaaa" />
