--- a/BibliotekaMobilnaPWR/res/layout/activity_recommend.xml
+++ b/BibliotekaMobilnaPWR/res/layout/activity_recommend.xml
@@ -12,7 +12,8 @@
         android:layout_alignParentLeft="true"
         android:layout_marginBottom="27dp"
         android:layout_marginLeft="26dp"
-        android:text="Back" />
+        android:background="@color/blue"
+        android:text="@string/rec_back" />
 
     <TextView
         android:id="@+id/textViewRecom"
@@ -28,28 +29,30 @@
         android:id="@+id/sms_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignRight="@+id/email_btn"
-        android:layout_below="@+id/textView1"
-        android:layout_marginTop="52dp"
-        android:text="sms" />
+        android:layout_below="@+id/textViewRecom"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="50dp"
+        android:background="@color/blue"
+        android:text="@string/SMS" />
 
     <Button
         android:id="@+id/email_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView1"
         android:layout_below="@+id/sms_btn"
-        android:layout_marginLeft="48dp"
-        android:layout_marginTop="21dp"
-        android:text="email" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="26dp"
+        android:background="@color/blue"
+        android:text="@string/email" />
 
     <Button
         android:id="@+id/twitter_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignRight="@+id/email_btn"
         android:layout_below="@+id/email_btn"
-        android:layout_marginTop="15dp"
-        android:text="twitter" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="23dp"
+        android:background="@color/blue"
+        android:text="@string/twitter" />
 
 </RelativeLayout>
