--- a/BibliotekaMobilnaPWR/res/layout/result_book.xml
+++ b/BibliotekaMobilnaPWR/res/layout/result_book.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical" 
+    android:background="@drawable/background">
 
     <TableLayout
         android:id="@+id/table"
@@ -25,7 +26,7 @@
             android:layout_width="match_parent"
             android:layout_height="270dp"
             android:layout_weight="0.65"
-            android:background="#EFFFBC"
+            android:background="#70FFFFFF"
             android:padding="10dp"
             android:shrinkColumns="*"
             android:stretchColumns="*" >
