--- a/BibliotekaMobilnaPWR/res/layout/activity_history.xml
+++ b/BibliotekaMobilnaPWR/res/layout/activity_history.xml
@@ -3,6 +3,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
+     <TextView 
+        android:id="@+id/tvH"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="24dp"
+        android:textStyle="bold"
+        android:text="Historia wypożyczeń"
+        android:layout_gravity="center_horizontal"/>
     
     <TableLayout 
         android:id="@+id/history_table"
