--- a/BibliotekaMobilnaPWR/res/layout/komunikat.xml
+++ b/BibliotekaMobilnaPWR/res/layout/komunikat.xml
@@ -2,9 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.example.bibliotekamobilnapwr.Main" >
+    android:layout_width="fill_parent"
+    android:layout_height="match_parent" >
     
     <TextView 
         android:id="@+id/comm_title"
@@ -20,7 +19,7 @@
     
     <ListView 
         android:id="@+id/comm_list"
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/comm_title"
         android:layout_alignParentBottom="true"
