--- a/BibliotekaMobilnaPWR/res/layout/komunikat_list_row.xml
+++ b/BibliotekaMobilnaPWR/res/layout/komunikat_list_row.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:layout_width="fill_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal" >
     <LinearLayout 
@@ -14,6 +14,7 @@
             android:layout_height="wrap_content"
             android:text="Tytuł"
             android:textSize="20dp"
+            android:textStyle="bold"
             android:layout_margin="3dp"/>
         
         <TextView 
@@ -55,7 +56,12 @@
             android:id="@+id/comm_usun"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="U"/>
+            android:text="Usuń"/>
+        <Button 
+            android:id="@+id/comm_edytuj"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Edytuj"/>
     </LinearLayout>
 
 </LinearLayout>
