--- a/BibliotekaMobilnaPWR/res/layout/popup_content.xml
+++ b/BibliotekaMobilnaPWR/res/layout/popup_content.xml
@@ -1,23 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_width="350px"
+    android:layout_height="150px"
     android:background="@drawable/popup">
     
     <ImageView
         android:id="@+id/popupsms"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="45px"
+        android:layout_marginLeft="25px"
         android:layout_alignParentLeft="true"
-        android:layout_marginTop="30dp"
-        android:layout_marginLeft="5dp"
+ 
         android:src="@drawable/sms" />
 
     <ImageView
         android:id="@+id/popupemail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-         android:layout_marginTop="30dp"
+android:layout_marginTop="45px"
         android:layout_toRightOf="@+id/popupsms"
         android:src="@drawable/email" />
 
@@ -25,7 +26,7 @@
         android:id="@+id/popuptwitter"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+android:layout_marginTop="45px"
         android:layout_toRightOf="@+id/popupemail"
         android:src="@drawable/twitter" />
 </RelativeLayout>
