--- a/BibliotekaMobilnaPWR/res/layout/activity_history.xml
+++ b/BibliotekaMobilnaPWR/res/layout/activity_history.xml
@@ -2,15 +2,35 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
-     <TextView 
-        android:id="@+id/tvH"
+   	android:orientation="vertical"
+    android:background="@drawable/background" >
+     <RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="45px" >
+
+    <ImageView
+        android:id="@+id/helpHistory"
+        android:layout_width="45px"
+        android:layout_height="45px"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:background="@drawable/help" />
+
+    <TextView
+        android:id="@+id/title_History"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="24dp"
-        android:textStyle="bold"
-        android:text="Historia wypożyczeń"
-        android:layout_gravity="center_horizontal"/>
+        android:layout_height="45px"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_toLeftOf="@+id/helpHistory"
+        android:background="#70FFFFFF"
+        android:gravity="center"
+        android:text="@string/title_History"
+        android:textAlignment="center"
+        android:textSize="20sp"
+        android:typeface="monospace" />
+
+</RelativeLayout>
     
     <TableLayout 
         android:id="@+id/history_table"
@@ -33,7 +53,7 @@
           	android:layout_width="match_parent"
             android:layout_height="270dp"
             android:layout_weight="0.65"
-            android:background="#EFFFBC"
+           android:background="#70FFFFFF"
             android:padding="10dp"
             android:shrinkColumns="*"
             android:stretchColumns="*" >            
@@ -41,14 +61,12 @@
         
     </ScrollView>
     
-    <Button 
+    <ImageView
         android:id="@+id/btnBack_hisory"
         android:layout_width="wrap_content"
-        android:layout_height="33dp"
-        android:layout_marginLeft="10dp"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
+        android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
-        android:background="#458b74"
-        android:text="@string/btnString"
-        />
+        android:background="@drawable/arrow_back" />
  </LinearLayout>
