--- a/BibliotekaMobilnaPWR/res/layout/booking_statement_activity.xml
+++ b/BibliotekaMobilnaPWR/res/layout/booking_statement_activity.xml
@@ -4,20 +4,46 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@drawable/background" >
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="45px" >
 
+    <ImageView
+        android:id="@+id/helpStatement"
+        android:layout_width="45px"
+        android:layout_height="45px"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:background="@drawable/help" />
+
+    <TextView
+        android:id="@+id/title_Statement"
+        android:layout_width="wrap_content"
+        android:layout_height="45px"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_toLeftOf="@+id/helpStatement"
+        android:background="#70FFFFFF"
+        android:gravity="center"
+        android:text="@string/title_Statement"
+        android:textAlignment="center"
+        android:textSize="20sp"
+        android:typeface="monospace" />
+
+</RelativeLayout>
     <TextView
         android:id="@+id/tvstatement"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"/>
 
-    <Button
+    <ImageView
         android:id="@+id/btnstatement"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
+        android:layout_gravity="center"
         android:padding="5dp"
-        android:background="@color/green_transparent"
-        android:text="OK" />
+        android:background="@drawable/button_ok"/>
 
 </LinearLayout>
