--- a/BibliotekaMobilnaPWR/res/layout/result_book.xml
+++ b/BibliotekaMobilnaPWR/res/layout/result_book.xml
@@ -2,15 +2,43 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" 
-    android:background="@drawable/background">
+    android:background="@drawable/background"
+    android:orientation="vertical" >
+
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="45px">
+
+    <ImageView
+        android:id="@+id/helpResult"
+        android:layout_width="45px"
+        android:layout_height="45px"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:background="@drawable/help" />
+
+    <TextView
+        android:id="@+id/title_result"
+        android:layout_width="wrap_content"
+        android:layout_height="45px"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_toLeftOf="@+id/helpResult"
+        android:background="#70FFFFFF"
+        android:gravity="center"
+        android:text="@string/title_result"
+        android:textAlignment="center"
+        android:typeface="monospace"
+        android:textSize="20sp" />
+
+</RelativeLayout>
 
     <TableLayout
         android:id="@+id/table"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp"
         android:background="#4285f4"
+        android:padding="10dp"
         android:shrinkColumns="*"
         android:stretchColumns="*" >
     </TableLayout>
@@ -33,14 +61,13 @@
         </TableLayout>
     </ScrollView>
 
-    <Button
+    <ImageView
         android:id="@+id/btnBack"
         android:layout_width="wrap_content"
-        android:layout_height="33dp"
-        android:layout_marginLeft="10dp"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
+        android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
-        android:background="#458b74"
-        android:text="@string/btnString" />
+        android:background="@drawable/arrow_back" />
 
 </LinearLayout>
