--- a/BibliotekaMobilnaPWR/res/layout/activity_orders.xml
+++ b/BibliotekaMobilnaPWR/res/layout/activity_orders.xml
@@ -2,15 +2,37 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
-     <TextView 
+    android:orientation="vertical"
+    android:background="@drawable/background" >
+    
+    <RelativeLayout 
+     	android:layout_width="match_parent"
+    	android:layout_height="45px">
+       
+        <ImageView
+        android:id="@+id/helpOrders"
+        android:layout_width="45px"
+        android:layout_height="45px"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:background="@drawable/help"  />
+        
+        <TextView 
         android:id="@+id/tvO"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="24dp"
-        android:textStyle="bold"
-        android:text="Zamówienia"
-        android:layout_gravity="center_horizontal"/>
+        android:layout_height="45px"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_toLeftOf="@+id/helpOrders"
+        android:background="#70FFFFFF"
+        android:gravity="center"
+        android:text="@string/title_Orders"        
+        android:textSize="20sp"
+        android:typeface="monospace"/>
+        
+        
+    </RelativeLayout>
+     
     
     <TableLayout 
         android:id="@+id/orders_table"
@@ -41,14 +63,14 @@
         
     </ScrollView>
     
-    <Button 
+    <ImageView
         android:id="@+id/btnBack_orders"
         android:layout_width="wrap_content"
-        android:layout_height="33dp"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_marginBottom="10dp"
         android:layout_marginTop="10dp"
-        android:background="#458b74"
-        android:text="@string/btnString"
+        android:background="@drawable/arrow_back"
+        
         />
  </LinearLayout>
